substrate/frame/support/test/tests/pallet_ui/default_config_with_no_default_in_system.stderr
error[E0220]: associated type `Block` not found for `Self`
  --> tests/pallet_ui/default_config_with_no_default_in_system.rs:25:31
   |
25 |         type MyGetParam2: Get<Self::Block>;
   |                                     ^^^^^ there is a similarly named associated type `Block` in the trait `frame_system::Config`
